# astrotoolz-api

./: Dockerfile  README.md  pyproject.toml
astrotoolz_api/: logger_conf.yaml  main.py
astrotoolz_api/model/: dasa_request.py  horoscope_request.py  timeline.py  timeline_request.py
astrotoolz_api/routers/: dasa.py  horoscope.py  horoscope_request_parser.py  horoscope_utils.py  timeline.py  timeline_request_parser.py  timeline_utils.py
astrotoolz_api/utils/: custom_json_encoder.py  date_utls.py  timeline_config_parser.py
requests/: dasa.http  horoscope.http  timeline.http  timeline_docker.http
